2004-08-17	blytkerchan	continue translation to C
	* module.mk [libthread_SRC]: add rw_lock.c
	* rw_lock.c: include assert.h
	include compare_and_exchange.h
	declare static functions for all undefined functions used
	(lt_rwlock_write_unlock) <place_holder>: new variable
	use atomic_swap_ptr in stead of atomic_swap
	use lt_thread_wake in stead of awake
	(lt_rwlock_scheule): fix type-os and missing semicolons
	use compare_and_exchange_ptr in stead of compare_and_exchange
	use READER in stead of reader and WRITER in stead of writer
	use lt_rwlock_queue_first in stead of first
	* rw_lock.h: include thread.h
	[lt_rwlock_t]: translate to C
	* thread.h [lt_thread_t]: add flag field

2004-08-16	blytkerchan	continue translation to C
	* rw_lock.c (lt_rwlock_read_unlock): use lt_rwlock_queue_empty on
	writers - not lt_rwlock_list_empty
	use lt_rwlock_list_empty on readers[1]
	use lt_thread_wake in stead of awake
	(lt_rwlock_write_unlock): use lt_rwlock_queue_deq, not
	lt_wrlock_queue_deq
	use lt_rwlock_list_move in stead of move
	use lt_rwlock_list_for_each in stead of for_each
	(lt_rwlock_schedule): use lt_rwlock_queue_enq in stead of enq
	use lt_rwlock_queue_first in stead of first
	use lt_thread_suspend in stead of suspend
	fix comments - make them C comments
	use compare_and_exchange in stead of CAS
	use lt_rwlock_queue_empty in stead of empty
	use lt_rwlock_queue_deq in stead of deq
	use lt_thread_wake in stead of awake
	use lt_rwlock_list_insert in stead of insert
	use lt_rwlock_queue_enq in stead of enq
	use lt_rwlock_list_empty in stead of empty, where applicable
	ditto for lt_rwlock_queue_empty
	use lt_thread_suspend in stead of suspend

2004-08-15	blytkerchan	start translating how_rwlocks_work into C
	* rw_lock.c: new file
	* rw_lock.h: ditto

2004-08-11	blytkerchan
	* rw_spinlock.h [rw_spinlock_t]: remove excl and shar fields

	* barrier.h: use uint32_t in stead of unsigned int throughout
	* barrier.c: ditto